# OOP

./: .gitignore
oop0/: CMakeLists.txt  main.cpp
oop3/: CMakeLists.txt  README.txt  map.txt
oop3/code/: game.cpp  game.hpp  main.cpp  room.hpp
oop4/: CMakeLists.txt  README.txt  test.sh
oop4/code/: pdadd.cpp  pdlist.cpp  pdremove.cpp  pdshow.cpp
oop4/lib/: date.cpp  db.cpp  diary.cpp  pd.hpp
oop5/: CMakeLists.txt
oop5/code/: frac.cpp  frac.hpp  main.cpp
oop6/: CMakeLists.txt
oop6/code/: main.cpp  vec.cpp  vec.hpp
oopx/: CMakeLists.txt  README.md  tupletest.cpp  typetest.cpp
oopx/code/: CMakeLists.txt  binserial.hpp  main.cpp  xmlserial.cpp
oopx/code/include/: bindeser.hpp  binserial.hpp  macro.hpp  myserial.hpp  utility.hpp  xmlctrl.hpp  xmldeser.hpp  xmlserial.hpp
oopx/data/: testfile
oopx/lib/: CMakeLists.txt
oopx/test/: CMakeLists.txt  main.cpp
oopx/test/include/: test.hpp  utility.hpp
oopx/test/src/: binarytest.cpp  main.cpp  structtest.cpp  test.cpp  xmltest.cpp
tmp/: CMakeLists.txt
tmp/code/: main.cpp  readf.cpp
tmp/data/: Problem3_new.lgr  bestn.txt
